# infra-bootstrap-tools

./: .ansible-lint  .envrc  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  Readme.md  Untitled Diagram.drawio  Vagrantfile  ansible.cfg  flake.nix  package.json  playbook.yml  requirements.txt  requirements.yml  result  test_caddy.sh  test_cat.py  test_xcaddy.sh
.changeset/: README.md  add-k3s-roles.md  add-prefect-stack.md  config.json  docker-swarm-inventory-group-rename.md  feat-release-workflow.md  k3s-flux-improvements.md  mean-seas-agree.md  openziti-keycloak-spire-stacks.md  perf-docker-apt.md  plain-chairs-post.md  red-roses-knock.md  sixty-grapes-crash.md  terraform-gcp-role.md  terraform-roles-standardize-inventory.md  test-agentic-package.md  test-stacks-package.md  utils-affected-roles-bool-fix.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.jules/: bolt.md  sentinel.md
1_deploy-caddy/: Caddyfile  Dockerfile  docker-compose.yml  playbook.yml  users.json
2_deploy-registry/: docker-compose.caddy.yml  docker-compose.yml  playbook.yml
3_deploy-portainer/: docker-compose.caddy.yml  playbook.yml
agentic/: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  __init__.py  agent.py  jules.schema.json  package.json  pyproject.toml  requirements.txt
agentic/deployment/: __init__.py  deploy.py
agentic/jules/: __init__.py  agent.py  models.py  url_validation.py
agentic/workflows/: __init__.py  jules_workflow.py
ansible/: CHANGELOG.md  README.md  docker-swarm-portainer-caddy-openziti.yml  docker-swarm-portainer-caddy.yml  docker-swarm-portainer.yml  docker-swarm.yml  docker.yml  full.yml  galaxy.yml  hello-world.yml  main.yml  package.json  (+2 more)
(+584 files in other folders)
